--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </head>
     <body id="index">
         <div id="page">
-            <header><a href="http://integration.visiooptik.fr/" id="head_home" title="Accueil VisiOOptiK"></a>
+            <header><a href="http://www.visiooptik.fr/" id="head_home" title="Accueil VisiOOptiK"></a>
                 <div id="head_right">
                     <div id="header_user">
                         <ul id="header_nav">
-                            <li><a href="http://integration.visiooptik.fr/order.php" id="shopping_cart" title="Votre panier d&#039;achat"></a><span class="ajax_cart_quantity"></span><span class="ajax_cart_no_product">(vide)</span></li>
+                            <li><a href="http://www.visiooptik.fr/order.php" id="shopping_cart" title="Votre panier d&#039;achat"></a><span class="ajax_cart_quantity"></span><span class="ajax_cart_no_product">(vide)</span></li>
                         </ul>
                     </div>
                 </div>
                 <div id="head_breadcrumb">
-                    <form action="http://integration.visiooptik.fr/search.php" id="searchbox" method="get">
+                    <form action="http://www.visiooptik.fr/search.php" id="searchbox" method="get">
                         <input type="hidden" name="orderby" value="position"/>
                         <input type="hidden" name="orderway" value="desc"/>
                         <input type="search" id="search_query" name="search_query" placeholder="Rechercher ..." value=""/>
@@ -34,25 +34,25 @@
             <div id="columns">
                 <section id="center_column">
                     <div class="breadcrumb">
-                        <nav><a class="bread" href="http://integration.visiooptik.fr/my-account.php?reg=1" id="bread_r" title="Lentilles de contact correctrices"><span class="bread_block" id="bread_refresh"></span>Renouveler ma commande</a><a class="bread" href="http://integration.visiooptik.fr/category.php?id_category=5" id="bread_l" title="Lentilles de contact correctrices"><span class="bread_block" id="bread_lentille"></span></a><a class="bread" id="bread_e" href="http://integration.visiooptik.fr/category.php?id_category=6" title="Produits d'entretien pour lentilles de contact"><span class="bread_block" id="bread_entretien"></span></a><a class="bread" href="http://integration.visiooptik.fr/category.php?id_category=7" id="bread_a" title="Accessoires pour lentilles de contact"><span class="bread_block" id="bread_accessoire"></span></a><a class="bread" href="http://integration.visiooptik.fr/category.php?id_category=37" id="bread_p" title="Pack eco de lentilles de contact"><span class="bread_block" id="bread_pack"></span></a></nav>
+                        <nav><a class="bread" href="http://www.visiooptik.fr/my-account.php?reg=1" id="bread_r" title="Lentilles de contact correctrices"><span class="bread_block" id="bread_refresh"></span>Renouveler ma commande</a><a class="bread" href="http://www.visiooptik.fr/category.php?id_category=5" id="bread_l" title="Lentilles de contact correctrices"><span class="bread_block" id="bread_lentille"></span></a><a class="bread" id="bread_e" href="http://www.visiooptik.fr/category.php?id_category=6" title="Produits d'entretien pour lentilles de contact"><span class="bread_block" id="bread_entretien"></span></a><a class="bread" href="http://www.visiooptik.fr/category.php?id_category=7" id="bread_a" title="Accessoires pour lentilles de contact"><span class="bread_block" id="bread_accessoire"></span></a><a class="bread" href="http://www.visiooptik.fr/category.php?id_category=37" id="bread_p" title="Pack eco de lentilles de contact"><span class="bread_block" id="bread_pack"></span></a></nav>
                     </div>
                 </section>
             </div>
             <footer>
                 <nav id="footer_menu">
                     <ul>
-                        <li><a href="http://integration.visiooptik.fr/my-account.php?reg=1">Renouveler ma commande</a></li>
-                        <li><a href="http://integration.visiooptik.fr/category.php?id_category=5">Lentilles</a></li>
-                        <li><a href="http://integration.visiooptik.fr/category.php?id_category=6">Produits</a></li>
-                        <li><a href="http://integration.visiooptik.fr/category.php?id_category=7">Accessoires</a></li>
-                        <li><a href="http://integration.visiooptik.fr/category.php?id_category=37">Packs €co</a></li>
-                        <li><a href="http://integration.visiooptik.fr/cms.php?id_cms=3">CGV</a></li>
+                        <li><a href="http://www.visiooptik.fr/my-account.php?reg=1">Renouveler ma commande</a></li>
+                        <li><a href="http://www.visiooptik.fr/category.php?id_category=5">Lentilles</a></li>
+                        <li><a href="http://www.visiooptik.fr/category.php?id_category=6">Produits</a></li>
+                        <li><a href="http://www.visiooptik.fr/category.php?id_category=7">Accessoires</a></li>
+                        <li><a href="http://www.visiooptik.fr/category.php?id_category=37">Packs €co</a></li>
+                        <li><a href="http://www.visiooptik.fr/cms.php?id_cms=3">CGV</a></li>
                     </ul>
-                </nav><span class="third_footer" id="footer_menu_button" title="Menu"><span id="help_footer"></span></span><a class="third_footer" href="http://integration.visiooptik.fr/" title="Acceuil VisiOOptiK"><span id="home_footer"></span></a><a class="third_footer" href="http://integration.visiooptik.fr/my-account.php" title="Mon compte"><span id="account_footer"></span></a><a class="mob_footer" href="tel:0810304036" title="0810304036"></a></footer>
+                </nav><span class="third_footer" id="footer_menu_button" title="Menu"><span id="help_footer"></span></span><a class="third_footer" href="http://www.visiooptik.fr/" title="Acceuil VisiOOptiK"><span id="home_footer"></span></a><a class="third_footer" href="http://www.visiooptik.fr/my-account.php" title="Mon compte"><span id="account_footer"></span></a><a class="mob_footer" href="tel:0810304036" title="0810304036"></a></footer>
         </div>
         </div>
         <div id="fixed_corner">
-            <a href="http://integration.visiooptik.fr/modules/pm_advancedfeedback/feedback.php?id_feedback=1" title="Donnez-nous votre avis"></a>
+            <a href="http://www.visiooptik.fr/modules/pm_advancedfeedback/feedback.php?id_feedback=1" title="Donnez-nous votre avis"></a>
         </div>
         <script type="text/javascript">/* <![CDATA[ */
             $('#footer_menu_button').click(function() {
